# zentao-monthly-worklog

./: .gitignore  README.md  config.example.json  pyproject.toml  zentao.cmd
docs/: quick-start.md  trial-guide.md
records/: record-schema.example.json
scripts/: __init__.py  install_skill.ps1  verify_2026_06.py  zentao_june_records_helper.py
skills/zentao-monthly-worklog/: SKILL.md
skills/zentao-monthly-worklog/agents/: openai.yaml
skills/zentao-monthly-worklog/references/: evidence-sources.md  prompt-examples.md  upload-compatibility.md
tests/: test_cli.py  test_client.py  test_collect.py  test_config.py  test_draft.py  test_records.py  test_uploader.py
zentao_tool/: __init__.py  batch.py  cli.py  client.py  collect.py  config.example.json  config.py  draft.py  records.py  uploader.py  web_comments.py
