[project]
name = "zentao-tool"
version = "1.0.0"
description = "Codex worklog to ZenTao task and bug recorder"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
zentao-tool = "zentao_tool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zentao_tool*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
