[project]
name = "zentao-tool"
version = "1.2.0"
description = "AI and Git monthly worklog to ZenTao recorder"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
zentao-tool = "zentao_tool.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zentao_tool*", "scripts*"]

[tool.setuptools.package-data]
zentao_tool = ["config.example.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
